final touches on fe and quote endpoint
