# orderbook/openapi.yml
@@ -438,7 +438,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/OrderQuote"
+                $ref: "#/components/schemas/OrderQuoteResponse"
         400:
           description: Error quoting order.
           content:
@@ -908,3 +908,14 @@ components:
               $ref: "#/components/schemas/Address"
           required:
             - from
+    OrderQuoteResponse:
+      type: object
+      properties:
+        quote:
+          $ref: "#/components/schemas/OrderQuote"
+        expirationDate:
+          description: |
+            Expiration date of the offered fee. Order service might not accept
+            the fee after this expiration date. Encoded as ISO 8601 UTC.
+          type: string
+          example: "1985-03-10T18:35:18.814523Z"
